--- a/start/css/chapter07-project03.css
+++ b/start/css/chapter07-project03.css
@@ -1,6 +1,8 @@
 html, body {
   height: 100%
 }
+
+
 .inline-block {
 	
 	display:inline-block;
@@ -8,10 +10,7 @@ html, body {
 	padding: 0 0 0 0;
 	margin: 0 0 0 0;
 }
-.row-height {
-	overflow-y:auto;
-	height:200px;
-}
+
 .inline-text {
 	float:right;
 }
@@ -19,3 +18,11 @@ html, body {
 	margin: 0 0 0 0;
 	padding: 0 0 0 0;
 }
+
+footer {
+	color:white;
+	background-color:#303f9f;
+}
+div.inputFieldBuffer{
+	margin-bottom:.5em;
+]
