--- a/start/css/chapter07-project03.css
+++ b/start/css/chapter07-project03.css
@@ -24,9 +24,18 @@ footer {
 }
 .darkBlue {
 	background-color:#0000FF;
-
+	margin: 0% 0% 0% 0%;
 }
+.contact-us-submit {
+	background: #FF69B4;
+	border: 10px ;
+	width: 14.8em;
+	margin-bottom: 1em;
+} 
 
 div.inputFieldBuffer{
 	margin-bottom:.5em;
-]
+
+}
+
+
