--- a/start/css/chapter07-project03.css
+++ b/start/css/chapter07-project03.css
@@ -1,13 +1,8 @@
-@font-face {
-  font-family: 'MyWebFont';
-  src: url('../fonts/glyphicons-halflings-regular.eot'); /* IE9 Compat Modes */
-       url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/glyphicons-halflings-regular.woff') format('woff'), /* Pretty Modern Browsers */
-       url('../fonts/glyphicons-halflings-regular.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflings-regular') format('svg'); /* Legacy iOS */
-}
+
 
 body {
+	
+
   margin: 0% 8% 0% 8%;
   width: 0% 8% 0% 8%;
 }
@@ -29,8 +24,9 @@ footer {
 	margin: 0 0 0 0;
 }
 
-.inline-text {
-	float:right;
+.recent-post-img{
+	float:left;
+
 }
 .no-padding {
 	margin: 0 0 0 0;
@@ -49,8 +45,9 @@ footer {
 .contact-us-submit {
 	background: #FF69B4;
 	border: 10px ;
-	width: 14.8em;
+	margin-top:1em;
 	margin-bottom: 1em;
+	color:white;
 } 
 
 div.inputFieldBuffer{
@@ -98,4 +95,13 @@ h1 {
 	font-size: 15pt;
 	color:white;
 	margin: 37px -15px;
+}
+
+@font-face {
+  font-family: 'MyWebFont';
+  src: url('../fonts/glyphicons-halflings-regular.eot'); /* IE9 Compat Modes */
+       url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/glyphicons-halflings-regular.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/glyphicons-halflings-regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflings-regular') format('svg'); /* Legacy iOS */
 }
