--- a/start/css/chapter07-project03.css
+++ b/start/css/chapter07-project03.css
@@ -35,12 +35,13 @@ footer {
 .darkBlue {
 	background-color:#0000FF;
 	margin: 0% 0% 0% 0%;
-
+	color:white;
 }
 .search-submit {
 	background:  #FF69B4;
 	border: 10px;
 	color:white;
+	padding: 3px 8px 3px 8px ;
 }
 .contact-us-submit {
 	background: #FF69B4;
@@ -94,7 +95,17 @@ h1 {
 	font-style:italic;
 	font-size: 15pt;
 	color:white;
-	margin: 37px -15px;
+	margin: 37px -0;
+}
+ul.topBar {
+	text-align:right;
+	 padding: 0 0 0 0;
+	 margin:0 0 0 0;
+	
+}
+ul.topBar > li {
+	padding: 0 1em 0 0 ;
+	display:inline;
 }
 
 @font-face {
