--- a/start/css/chapter07-project03.css
+++ b/start/css/chapter07-project03.css
@@ -125,11 +125,11 @@ i[class~="fa-envelope"] { /*Fixes weird indent clearfix doesn't include like row
   background-color: hotpink; /* Green */
   border: none;
   color: white;
-  padding: 5px 5px;
+  padding: 3px 3px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 100%;
+  font-size: 13px;
   margin: 4px 2px;
   cursor: pointer;
 
@@ -138,14 +138,28 @@ i[class~="fa-envelope"] { /*Fixes weird indent clearfix doesn't include like row
   background-color: lightblue; /* Green */
   border: none;
   color: white;
-  padding: 5px 5px;
+  padding: 3px 3px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 100%;
+  font-size: 13px;
   margin: 4px 2px;
   cursor: pointer;
 
+
+}
+.tags{
+  background-color: darkblue; /* Green */
+  border: none;
+  border-radius:5px;
+  color: white;
+  padding: 3px 3px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 2px 1px;
+  cursor: pointer;
 
 }
 
