Fixed right icons to resize

--- a/start/css/chapter07-project03.css
+++ b/start/css/chapter07-project03.css
@@ -92,7 +92,7 @@ td{
 	padding-bottom:2%;
 }
 
-.rightIcons button{
+.rightIcons{
 float:left;
 background-color:white;
 display:inline-block;
@@ -100,8 +100,8 @@ margin-top:5%;
 margin-bottom:5%;
 padding-top:2%;
 padding-bottom:2%;
-padding-right:7%;
-padding-left:7%;
+padding-right:8%;
+padding-left:8%;
 }
 
 h1 {
@@ -125,7 +125,6 @@ i[class~="fa-envelope"] { /*Fixes weird indent clearfix doesn't include like row
 }
 .relatedPhoto {
 	display:block;
-	list-style:none;
 	border: thin purple solid;
 	margin: 3%;
 	padding: 3%;
