Basic layout for small screens
it's responsive motherfucker

--- a/start/css/chapter07-project03.css
+++ b/start/css/chapter07-project03.css
@@ -89,3 +89,23 @@ td{
 	padding-bottom:2%;
 }
 
+@media only screen and (max-width:991px){
+	table{
+		margin:0%;
+		width:100%;
+	}
+	
+	.mainIMG{
+		margin-top:2%;
+		width:90%;
+	}
+	/*
+	.relatedPicturesRow1{
+		width:50%;
+	}
+	
+	.relatedPicturesRow2{
+		width:50%;
+	}*/
+}
+
